<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/title_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="60dp"
            android:text="@string/signup_title"
            android:textColor="@color/color2"
            android:textSize="38sp"
            android:textStyle="bold" />

        <EditText
            android:paddingVertical="10dp"
            android:id="@+id/login_mail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/color2"
            android:drawableStart="@drawable/mail_1"
            android:drawablePadding="16dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textAlignment="viewStart" />

        <EditText
            android:id="@+id/set_pass"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:autofillHints="password"
            android:backgroundTint="@color/color2"
            android:drawableStart="@drawable/lock_a"
            android:drawablePadding="16dp"
            android:hint="@string/set_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textAlignment="viewStart" />

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:autofillHints="password"
            android:backgroundTint="@color/color2"
            android:drawableStart="@drawable/lock_a"
            android:drawablePadding="16dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textAlignment="viewStart" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="100dp"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color2"
            android:text="@string/signup_title" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="80dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_ask" />
            <TextView
                android:id="@+id/signup_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_login"
                android:textColor="@color/color2"
                android:clickable="true" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>